--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
+    "test": "jest",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -18,7 +19,9 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.22.5",
     "@next/eslint-plugin-next": "^13.4.7",
+    "@types/jest": "^29.5.2",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
@@ -28,6 +31,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.2.3",
     "prettier": "2.8.8",
     "typescript": "5.0.4"
