--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
     "test": "jest",
+    "test:watch": "npm run test -- --watchAll",
     "prepare": "husky install"
   },
   "lint-staged": {
-    "src/**/*": "npm run lint --fix"
+    "src/**/*": [
+      "npm run lint --fix",
+      "npm run test --bail"
+    ]
   },
   "dependencies": {
     "next": "13.4.7",
@@ -21,6 +25,8 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.22.5",
     "@next/eslint-plugin-next": "^13.4.7",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
