--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "next": "13.4.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^6.0.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.22.5",
@@ -32,6 +33,7 @@
     "@types/react": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -39,6 +41,7 @@
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "jest-styled-components": "^7.1.1",
     "lint-staged": "^13.2.3",
     "prettier": "2.8.8",
     "typescript": "5.0.4"
