feat: change crlf to lf using npx prettier --write .

--- a/.babelrc
+++ b/.babelrc
@@ -7,8 +7,5 @@
       }
     ]
   ],
-  "presets": [
-    "next/babel",
-    "@babel/preset-typescript"
-  ]
+  "presets": ["next/babel", "@babel/preset-typescript"]
 }
