--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,9 +23,6 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": [
-    "@typescript-eslint",
-    "react"
-  ],
+  "plugins": ["@typescript-eslint", "react"],
   "rules": {}
 }
