--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,17 +9,16 @@
   "editor.formatOnSaveMode": "file",
   "editor.codeActionsOnSave": {
     "source.organizeImports": true,
-    "source.fixAll.eslint": true,
+    "source.fixAll.eslint": true
   },
   "files.associations": {
     ".env.*": "dotenv",
     ".prettierrc": "json"
   },
-  "files.eol": "\r\n", // CRLF
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
   "files.trimFinalNewlines": true,
   "javascript.suggest.autoImports": true,
   "javascript.updateImportsOnFileMove.enabled": "always",
-  "workbench.editor.highlightModifiedTabs": true,
+  "workbench.editor.highlightModifiedTabs": true
 }
