--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:watch": "npm run test -- --watchAll",
     "prepare": "husky install"
   },
