--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,10 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# sw stuff
+# storybook
+storybook-static
+
+# pwa stuff
 public/sw.js
 public/workbox-*.js
 public/fallback-*.js
