--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -16,20 +16,20 @@ jobs:
     steps:
       - name: 'Checkout Repository'
         uses: actions/checkout@v3
-        
+
       - name: 'Setup Node'
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
-        
+
       - name: 'Install dependencies'
-        run: npm run install
-        
+        run: npm install
+
       - name: 'Lint'
         run: npm run lint
-        
+
       - name: 'Test'
         run: npm run test
-        
+
       - name: 'Build'
         run: npm run build
