--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest --passWithNoTests",
     "test:watch": "npm run test -- --watchAll",
     "prepare": "husky install",
+    "generate": "plop --plopfile ./.generators/plopfile.js",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -55,6 +56,7 @@
     "jest-environment-jsdom": "^29.5.0",
     "jest-styled-components": "^7.1.1",
     "lint-staged": "^13.2.3",
+    "plop": "^3.1.2",
     "prettier": "2.8.8",
     "storybook": "^7.0.24",
     "typescript": "5.0.4"
